cluster/kube-system/global-network-policies/templates/global-allow-dns.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-kube-dns
spec:
  selector: projectcalico.org/namespace not in  {'kube-system', 'calico-system', 'calico-apiserver'}
  ingress:
    - action: Allow
  egress:
    - action: Allow
      destination:
        services:
          name: kube-dns
          namespace: kube-system
    # Temporary - allow all egress
    - action: Allow

# We need another policy which will allow kube-dns ingress !!!
